@@ -1,0 +1,76 @@
+# fvdefaults.conf
+# igneus 31.12.2008
+
+# Default freeVikings configuration file.
+# User's configuration file has the same structure.
+#
+# It's a valid Ruby source file, you can check it's syntax by
+# executing it with Ruby interpreter. (It does nothing - just initializes
+# a simple data structure and ends without any action - unless you add some,
+# of course)
+
+CONFIG = {
+
+  ### FILES
+  'Files' => {
+
+    # Array of directories where freeVikings will look for sets of levels
+    'levels' => ['locs'],
+
+    # where directories gfx/ and music/ are
+    'media' => ''
+  },
+
+  ### VIDEO
+  'Video' => {
+
+    # true or false
+    'fullscreen' => false,
+
+    # :bottom, :top, :left, :right
+    'panel placement' => :bottom,
+
+    # true or false
+    # freeVikings normally show progressbar while loading a level -
+    # but sometimes Thread starvation happens and progressbar is shown
+    # without loading anything...
+    'loading progressbar' => true
+  },
+
+  ### AUDIO
+  'Audio' => {
+
+    # true or false
+    'music enabled' => true,
+
+    # number
+    'music volume' => 61
+  },
+
+  ### GAME
+  'Game' => {
+    'order of vikings' => ['Erik', 'Baleog', 'Olaf'],
+
+    # true or false
+    # If level password should be shown at the beginning of level in a black
+    # box as in classic Lost Vikings. (Actually it is never more needed in the
+    # windowed mode - you can read the password in window's caption)
+    'show level password' => false,
+
+    # :warp or :smooth
+    # If switching between vikings should be done by a "warp" or by smooth
+    # movement of the "camera"
+    'viking switch' => :warp,
+
+    # number. 1 means normal speed, > 1 meens higher speed of game objects.
+    'game speed' => 1,
+
+    # Milliseconds to sleep in every frame (use this if freeVikings
+    # have fps higher then 20 and vikings move suspiciously slowly)
+    'frame delay' => 0
+  },
+
+  ### CONTROLS - CURRENTLY USELESS
+  'Controls' => {
+  }
+}
