@@ -1,0 +1,30 @@
+# configdef.conf
+# igneus 31.12.2008
+
+# Defines structure of configuration file and types of values.
+
+CONFIG = {
+  'Files' => {
+    'levels' => Array,
+    'media' => String
+  },
+  'Video' => {
+    'fullscreen' => [true, false],
+    'panel placement' => [:bottom, :top, :left, :right],
+    'loading progressbar' => [true, false]
+  },
+  'Audio' => {
+    'music enabled' => [true, false],
+    'music volume' => Numeric
+  },
+  'Game' => {
+    'order of vikings' => Array,
+    'show level password' => [true, false],
+    'viking switch' => [:warp, :smooth],
+    'game speed' => Numeric,
+    'frame delay' => Numeric
+  },
+  'Controls' => {
+  }
+}
+
