@@ -11,6 +11,10 @@
 - bottompanel.rb, trash.rb: when an item is dropped into the trash,
   symbol of recyclation rotates for a while
 - created directory config/, configuration files moved there
+- configuration.rb: class for loading configuration files
+- config/structure.conf: definition of structure of a configuration file
+  and supported values
+- config/defaults.conf: default values
 
 [30.December 2008]
 - viking.rb: Viking standing on the top of a ladder is able to climb it down.
